--- a/assets/scss/fonts.scss
+++ b/assets/scss/fonts.scss
@@ -22,13 +22,13 @@
 @font-face {
     font-family: Poppins;
     src: url('../fonts/Poppins-Bold.ttf');
-    font-weight: bold;
+    font-weight: 700;
     font-display: fallback;
 }
 
 @font-face {
     font-family: Lato;
     src: url('../fonts/Lato-Bold.ttf');
-    font-weight: bold;
+    font-weight: 700;
     font-display: fallback;
 }
