--- a/assets/scss/variable.scss
+++ b/assets/scss/variable.scss
@@ -3,32 +3,45 @@
     --white-cl: #fff;
     --main-cl: #0F1B4C;
     --nav-text-cl: #4F5361;
+    --sub-text-cl: #687690;
+    --main-text-cl: #000336;
+    --text-cl: #5A6473;
     --bg-cl: #E6F0FF;
     --container-width: 1140px;
     --header-height: 40px;
-    --section-pd: 40px;
+    --section-pd: 80px;
+}
+@-ms-viewport {
+    width: device-width;
+}
+*{
+    box-sizing: border-box;
 }
 html{
     font-size: 62.5%;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
 }
 body{
     font-size: 1.4rem;
-    box-sizing: border-box;
     font-family: Poppins;
 }
 .container{
     width: var(--container-width);
     max-width: 100%;
     margin: auto;
-    padding: 0 30px;
-}
-ul{
-    list-style-type: none;
+    padding: 0 15px;
 }
 a{
     text-decoration: none;
     color: var(--nav-text-cl);
     line-height: 2.1rem;
+
+    &:hover{
+        opacity: .8;
+    }
 }
 button{
     padding: 12px 8px;
@@ -37,6 +50,7 @@ button{
 
     color: var(--main-cl);
     font-weight: 500;
+    font-family: Poppins;
 
     cursor: pointer;
     &.primary{
