--- a/assets/scss/variable.scss
+++ b/assets/scss/variable.scss
@@ -7,6 +7,7 @@
     --main-text-cl: #000336;
     --text-cl: #5A6473;
     --bg-cl: #E6F0FF;
+    --link-cl: #0689FF;
     --container-width: 1140px;
     --header-height: 40px;
     --section-pd: 80px;
@@ -72,5 +73,12 @@ button{
     &.size-m{
         width: 170px;
         padding: 17px 8px;
+    }
+}
+
+.link{
+    a{
+        color: var(--link-cl);
+        font-weight: 600;
     }
 }
