--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -31,3 +31,12 @@ header{
         }
     }
 }
+
+@media (max-width: 991px){
+    header{
+        padding-top: 20px;
+        .nav{
+            display: none;
+        }
+    }
+}
