--- a/assets/scss/sections/client.scss
+++ b/assets/scss/sections/client.scss
@@ -3,6 +3,7 @@
     .container{
      display: flex;
      justify-content: space-between;
+     align-items: flex-end;
      flex-wrap: wrap;
      gap: 70px;
     }
@@ -44,5 +45,45 @@
                 width: 100%;
             }
         }
+    }
+    @media (max-width: 991px){
+        .container{
+            gap: 50px;
+           }
+           .text{
+               font-size: 1.4rem;
+               line-height: 1.8rem;
+               color: #7D8589;
+           }
+           &__content{
+               &-text{
+                   margin-top: 18px;
+               }
+           }
+           &__review{
+               &-star{
+                   width: 80px;
+                   height: 14px;
+               }
+               &-text{
+                   margin-top: 10px;
+               }
+           }
+           &__logo{
+               height: unset;
+               
+               justify-content: center;
+               flex-wrap: wrap;
+
+               gap: 50px;
+               &-item{
+                   width: fit-content;
+                   height: 40px;
+                   img{
+                       width: 100%;
+                       height: 100%;
+                   }
+               }
+           }
     }
 }
