--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,6 +196,35 @@ button.size-m {
   margin-top: 20px;
 }
 
+.nav {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 50vw;
+  height: 100vh;
+  padding-top: 80px;
+  background-color: var(--white-cl);
+  transform: translateX(100%);
+  transition: 0.3s linear;
+}
+.nav ul {
+  display: flex;
+  flex-direction: column;
+}
+.nav ul li {
+  width: 100%;
+  text-align: center;
+}
+.nav ul li a {
+  display: block;
+  width: 100%;
+  padding: 10px 0;
+}
+.nav.active {
+  transform: translateX(0);
+  transition: 0.3s linear;
+}
+
 @media (max-width: 1199px) {
   :root {
     --container-width: 960px;
@@ -223,8 +252,36 @@ button.size-m {
   }
   .content p {
     font-size: 1.4rem;
-    line-height: 2.6rem;
+    line-height: 2rem;
     margin-top: 10px;
+  }
+}
+@media (max-width: 767px) {
+  :root {
+    --container-width: 540px;
+    --section-pd: 30px;
+  }
+  svg.brand-logo {
+    width: 80px;
+  }
+  button {
+    width: 60px;
+    padding: 4px;
+  }
+  button.primary {
+    width: 70px;
+  }
+  button.size-m {
+    width: 120px;
+    padding: 8px;
+  }
+  .content h3 {
+    font-size: 1.8rem;
+    line-height: 1.8rem;
+  }
+  .content p {
+    font-size: 1.2rem;
+    line-height: 1.8rem;
   }
 }
 header {
@@ -256,15 +313,66 @@ header > .container .action {
   align-items: center;
   gap: 18px;
 }
-
+header > .container .sidebar-menu-btn {
+  height: 26px;
+  width: 32px;
+  z-index: 2;
+  display: none;
+  margin-left: 20px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+header > .container .sidebar-menu-btn .line {
+  display: block;
+  height: 4px;
+  width: 100%;
+  border-radius: 10px;
+  background: #0e2431;
+}
+header > .container .sidebar-menu-btn .line1 {
+  transform-origin: 0% 0%;
+  transition: transform 0.4s ease-in-out;
+}
+header > .container .sidebar-menu-btn .line2 {
+  transition: transform 0.2s ease-in-out;
+}
+header > .container .sidebar-menu-btn .line3 {
+  transform-origin: 0% 100%;
+  transition: transform 0.4s ease-in-out;
+}
+header > .container .sidebar-menu-btn.active .line1 {
+  transform: rotate(45deg);
+}
+header > .container .sidebar-menu-btn.active .line2 {
+  transform: scaleY(0);
+}
+header > .container .sidebar-menu-btn.active .line3 {
+  transform: rotate(-45deg);
+}
 @media (max-width: 991px) {
   header {
     padding-top: 20px;
   }
-  header .nav {
+  header .container .nav {
     display: none;
   }
+  header .container .sidebar-menu-btn {
+    display: flex;
+  }
 }
+@media (max-width: 767px) {
+  header > .container .action {
+    gap: 0;
+  }
+  header > .container .sidebar-menu-btn {
+    height: 16px;
+    width: 22px;
+  }
+  header > .container .sidebar-menu-btn .line {
+    height: 2px;
+  }
+}
+
 .hero {
   background: var(--bg-cl);
   padding-top: 40px;
@@ -307,7 +415,6 @@ header > .container .action {
 .hero__right img {
   width: 100%;
 }
-
 @media (max-width: 1599px) {
   .hero .container {
     justify-content: unset;
@@ -347,6 +454,27 @@ header > .container .action {
     margin-right: 0;
   }
 }
+@media (max-width: 767px) {
+  .hero {
+    padding-bottom: 20px;
+  }
+  .hero__left-content .sub-heading {
+    font-size: 1.2rem;
+  }
+  .hero__left-content .heading {
+    font-size: 2rem;
+    margin: 4px 0 8px;
+  }
+  .hero__left-content .sub {
+    font-size: 1rem;
+    margin-bottom: 10px;
+  }
+  .hero__right {
+    width: 40%;
+    margin-right: 0;
+  }
+}
+
 .client {
   padding: var(--section-pd) 0;
 }
@@ -425,6 +553,31 @@ header > .container .action {
     height: 100%;
   }
 }
+@media (max-width: 767px) {
+  .client .container {
+    gap: 20px;
+  }
+  .client .text {
+    font-size: 1.2rem;
+    line-height: 1.4rem;
+  }
+  .client__content-text {
+    margin-top: 10px;
+  }
+  .client__review-star {
+    margin-left: 0;
+  }
+  .client__review-text {
+    margin-top: 10px;
+  }
+  .client__logo {
+    gap: 20px;
+    margin-top: 20px;
+  }
+  .client__logo-item {
+    height: 20px;
+  }
+}
 
 .feature1 {
   padding: var(--section-pd) 0;
@@ -439,6 +592,7 @@ header > .container .action {
 .feature1 .heading__left h3 {
   font-size: 3.5rem;
   line-height: 3.5rem;
+  font-weight: 600;
   color: var(--heading-cl);
   margin-bottom: 15px;
 }
@@ -519,6 +673,24 @@ header > .container .action {
     flex-direction: column;
   }
 }
+@media (max-width: 767px) {
+  .feature1 .heading {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+  .feature1 .heading__left h3 {
+    font-size: 2rem;
+    line-height: 2rem;
+  }
+  .feature1 .heading__left p {
+    font-size: 1.2rem;
+    line-height: 2rem;
+  }
+  .feature1__item {
+    width: 100%;
+  }
+}
 
 .how-it-work {
   padding: var(--section-pd) 0;
@@ -568,6 +740,16 @@ header > .container .action {
     width: 150px;
   }
 }
+@media (max-width: 767px) {
+  .how-it-work .sale-type {
+    margin: 30px 30px 18px 30px;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .how-it-work .sale-type__item-img {
+    margin-bottom: 20px;
+  }
+}
 
 .news {
   padding: var(--section-pd) 0;
@@ -608,6 +790,37 @@ header > .container .action {
 .news__img img {
   height: 100%;
 }
+@media (max-width: 991px) {
+  .news {
+    overflow-x: hidden;
+  }
+  .news .container {
+    gap: 0;
+  }
+  .news__content {
+    min-width: 44%;
+    margin-left: 40px;
+  }
+  .news__content h3 {
+    font-size: 2.4rem;
+    line-height: 2.4rem;
+  }
+  .news__content p {
+    font-size: 1.4rem;
+    line-height: 2rem;
+    margin-top: 10px;
+    margin-bottom: 15px;
+  }
+  .news__img {
+    height: 350px;
+    flex-shrink: unset;
+  }
+}
+@media (max-width: 767px) {
+  .news {
+    display: none;
+  }
+}
 
 .feature2 {
   padding: var(--section-pd);
@@ -643,8 +856,40 @@ header > .container .action {
   color: #7B8087;
 }
 @media (max-width: 991px) {
-  .feature2_content {
-    margin-bottom: 60px;
+  .feature2__content {
+    margin-bottom: 30px;
+  }
+  .feature2__content-img {
+    transform: scale(0.8);
+  }
+  .feature2__countdown-item-amount {
+    font-size: 4rem;
+    line-height: 4rem;
+    margin-bottom: 10px;
+  }
+  .feature2__countdown-item-name {
+    font-size: 1.4rem;
+  }
+}
+@media (max-width: 767px) {
+  .feature2__content {
+    margin-bottom: 40px;
+    flex-direction: column;
+  }
+  .feature2__countdown {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+  }
+  .feature2__countdown-item {
+    width: calc(50% - 10px);
+  }
+  .feature2__countdown-item-amount {
+    font-size: 2rem;
+    line-height: 2rem;
+  }
+  .feature2__countdown-item-name {
+    font-size: 1.2rem;
   }
 }
 
@@ -696,6 +941,41 @@ footer .container .copyright {
 }
 footer .container .copyright__text {
   color: #C2C2C2;
+}
+@media (max-width: 991px) {
+  footer .container .menu {
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 50px;
+  }
+  footer .container .menu__item {
+    width: 40%;
+  }
+  footer .container .copyright {
+    padding-top: 50px;
+    padding-bottom: 30px;
+  }
+}
+@media (max-width: 767px) {
+  footer .container .menu {
+    gap: 40px;
+  }
+  footer .container .menu__item {
+    width: 100%;
+  }
+  footer .container .menu__item-heading {
+    margin-bottom: 20px;
+  }
+  footer .container .menu__item .social {
+    margin-top: 20px;
+    gap: 10px;
+  }
+  footer .container .copyright {
+    flex-direction: column;
+    gap: 10px;
+    padding-top: 50px;
+    padding-bottom: 30px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
