--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -52,4 +52,43 @@ footer{
             }
         }
     }
+    @media (max-width: 991px){
+        .container{
+            .menu{
+                flex-wrap: wrap;
+                justify-content: space-around;
+                gap: 50px;
+                &__item{
+                    width: 40%;
+                }
+            }
+            .copyright{
+                padding-top: 50px;
+                padding-bottom: 30px;
+            }
+        }
+    }
+    @media (max-width: 767px){
+        .container{
+            .menu{
+                gap: 40px;
+                &__item{
+                    width: 100%;
+                    &-heading{
+                        margin-bottom: 20px;
+                    }
+                    .social{
+                        margin-top: 20px;
+                        gap: 10px;
+                    }
+                }
+            }
+            .copyright{
+                flex-direction: column;
+                gap: 10px;
+                padding-top: 50px;
+                padding-bottom: 30px;
+            }
+        }
+    }
 }
