--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -1,42 +1,113 @@
-header{
+header {
     background: var(--bg-cl);
     padding-top: 38px;
-    & > .container{
+
+    &>.container {
         min-height: var(--header-height);
         display: flex;
         justify-content: space-between;
         align-items: center;
         height: 100%;
-        .info{
+
+        .info {
             display: flex;
             align-items: center;
             gap: 60px;
-            .nav{
-                ul{
+
+            .nav {
+                ul {
                     display: flex;
                     align-items: center;
                     gap: 30px;
-                    li{
-                        a{
+
+                    li {
+                        a {
                             font-weight: 500;
                         }
                     }
                 }
             }
         }
-        .action{
+
+        .action {
             display: flex;
             align-items: center;
             gap: 18px;
         }
-    }
-}
 
-@media (max-width: 991px){
-    header{
-        padding-top: 20px;
-        .nav{
+        .sidebar-menu-btn {
+            height: 26px;
+            width: 32px;
+            z-index: 2;
             display: none;
+            margin-left: 20px;
+            flex-direction: column;
+            justify-content: space-between;
+
+            .line {
+                display: block;
+                height: 4px;
+                width: 100%;
+                border-radius: 10px;
+                background: #0e2431;
+            }
+
+            .line1 {
+                transform-origin: 0% 0%;
+                transition: transform 0.4s ease-in-out;
+            }
+
+            .line2 {
+                transition: transform 0.2s ease-in-out;
+            }
+
+            .line3 {
+                transform-origin: 0% 100%;
+                transition: transform 0.4s ease-in-out;
+            }
+
+            &.active {
+                .line1 {
+                    transform: rotate(45deg);
+                }
+
+                .line2 {
+                    transform: scaleY(0);
+                }
+
+                .line3 {
+                    transform: rotate(-45deg);
+                }
+            }
+        }
+    }
+
+    @media (max-width: 991px) {
+        padding-top: 20px;
+
+        .container {
+            .nav {
+                display: none;
+            }
+
+            .sidebar-menu-btn {
+                display: flex;
+            }
+        }
+    }
+
+    @media (max-width: 767px) {
+        &>.container {
+            .action {
+                gap: 0;
+            }
+            .sidebar-menu-btn{
+                height: 16px;
+                width: 22px;
+                .line{
+                    height: 2px;
+                }
+            }
         }
     }
 }
