--- a/assets/scss/sections/client.scss
+++ b/assets/scss/sections/client.scss
@@ -86,4 +86,33 @@
                }
            }
     }
+    @media (max-width: 767px){
+        .container{
+            gap: 20px;
+           }
+           .text{
+               font-size: 1.2rem;
+               line-height: 1.4rem;
+           }
+           &__content{
+               &-text{
+                   margin-top: 10px;
+               }
+           }
+           &__review{
+               &-star{
+                   margin-left: 0;
+               }
+               &-text{
+                   margin-top: 10px;
+               }
+           }
+           &__logo{
+            gap: 20px;
+            margin-top: 20px;
+               &-item{
+                   height: 20px;
+               }
+           }
+    }
 }
