--- a/assets/scss/sections/feature1.scss
+++ b/assets/scss/sections/feature1.scss
@@ -11,6 +11,7 @@
             h3{
                 font-size: 3.5rem;
                 line-height: 3.5rem;
+                font-weight: 600;
                 color: var(--heading-cl);
 
                 margin-bottom: 15px;
@@ -94,6 +95,26 @@
             &-list{
                 flex-direction: column;
             }
+        }
+    }
+    @media (max-width: 767px){
+        .heading{
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 10px;
+            &__left{
+                h3{
+                    font-size: 2rem;
+                    line-height: 2rem;
+                }
+                p{
+                    font-size: 1.2rem;
+                    line-height: 2rem;
+                }
+            }
+        }
+        &__item{
+            width: 100%;
         }
     }
 }
